kubernetes/service.yaml
apiVersion: v1

kind: Service

metadata:

  name: transportation-service

  namespace: transportation

spec:

  type: NodePort

  selector:

    app: transportation

  ports:

  - port: 80

    targetPort: 80

    nodePort: 30080
